<resources>
    <string name="app_name">Calories Calculator</string>
    <string name="profiles">Profiles</string>
    <string name="activity_info">Activity Levels:\n\nVery Light: most of day sitting at work or at home, a little slow walking, some standing and light household chores.
\n\nLight: mostly sedentary, standing or slow walking, but including about 2 hours a day of further activity - e.g. gardening, heavy housework, brisk walking.
\n\nModerate: some occupational walking rather than just sedentary work, plus a little vigorous additional exercise, e.g. dancing, swimming.
\n\nHeavy: high levels of activity, both at work and in leisure hours.</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="no_profiles">No profiles to display</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="weight">Weight</string>
    <string name="plus">+</string>
    <string name="kilograms">Kilograms</string>
    <string name="height">Height</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="age">Age</string>
    <string name="activity_level">Activity Level</string>
    <string name="i_want_to_lose">I want to lose:</string>
    <string name="gender2">Gender:</string>
    <string name="weight2">Weight:</string>
    <string name="height2">Height:</string>
    <string name="age2">Age:</string>
    <string name="activity_level2">Activity Level:</string>
    <string name="in">in</string>
    <string name="calculate_calories">Calculate Calories</string>
    <string name="week">Week</string>
    <string name="calories">Calories</string>
    <string name="centimetres">Centimetre</string>
    <string name="add_profile">Add Profile:</string>
    <string name="name">Name</string>
    <string name="current_special">Currently inputted text and units will be saved to this profile. Weight wanted to lose and time will not be saved.</string>
    <string name="prompt_error">Make sure the all required numbers are inputted!</string>
    <string name="name_error">Please specify a name for the profile.</string>
    <string name="delete">Delete</string>
    <string name="disclaimer">Disclaimer: Any (-ve) negative value that has 2 asterisks (**), ie trying to lose 50 pounds in 1 week is not possible. Values with one asterisk (*) indicates a very low calorie intake. As a rule of thumb you should not eat below 1200 calories for female and 1600 calories for male.</string>
    <string name="rename_to">Rename to:</string>
    <string name="new_name">New Name</string>
    <string name="rename">Rename</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteConfirm">Are you sure you want to delete this profile?</string>
</resources>
