<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.abdal.caloriescalculator.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/Gender"
        android:layout_width="98dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif"
        android:text="@string/gender2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/WeightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/weight2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Gender" />

    <EditText
        android:id="@+id/WeightTextField"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/kilograms"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/WeightTextView"
        app:layout_constraintTop_toBottomOf="@+id/MaleFemaleButton" />

    <Spinner
        android:id="@+id/WeightList"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="184dp"
        app:layout_constraintStart_toEndOf="@+id/WeightTextField"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/MaleFemaleButton"
        android:layout_width="198dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="108dp"
        android:orientation='horizontal'
        app:layout_constraintStart_toEndOf="@+id/Gender"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HeightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/height2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeightTextView" />

    <EditText
        android:id="@+id/HeightTextField"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/centimetres"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/HeightTextView"
        app:layout_constraintTop_toBottomOf="@+id/WeightTextField" />

    <Spinner
        android:id="@+id/HeightList"
        android:layout_width="94dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/HeightTextField"
        app:layout_constraintTop_toBottomOf="@+id/WeightList" />

    <EditText
        android:id="@+id/HeightInchesTextField"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:hint="@string/inches"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/HeightList"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AgeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/age2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeightTextView" />

    <EditText
        android:id="@+id/AgeTextField"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/AgeTextView"
        app:layout_constraintTop_toBottomOf="@+id/HeightTextField" />

    <TextView
        android:id="@+id/ActivityLevelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/activity_level2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgeTextView" />

    <Spinner
        android:id="@+id/ActivityLevelList"
        android:layout_width="225dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/ActivityLevelTextView"
        app:layout_constraintTop_toBottomOf="@+id/AgeTextField" />

    <ImageButton
        android:id="@+id/questionButton"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeightList"
        app:srcCompat="@drawable/blue_question_mark" />

    <TextView
        android:id="@+id/editTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="36dp"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="122dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivityLevelList" />
</android.support.constraint.ConstraintLayout>
